# senior_design_fast

./: CMakeLists.txt  README.txt  main.cpp
datasets/: Keller1CoordsAccurate.txt  Keller1CoordsEstimate.txt  Keller1coordsAccurate.txt  Keller1coordsEstimate.txt  Keller2CoordsAccurate.txt  Keller2CoordsEstimate.txt  Keller2coordsAccurate.txt  Keller2coordsEstimate.txt  Smith1coordsAccurate.txt  Smith1coordsEstimate.txt  Smith2CoordsAccurate.txt  Smith2CoordsEstimate.txt  Smith2coordsAccurate.txt  Smith2coordsEstimate.txt  WalterCoordsAccurate.txt  WalterCoordsEstimate.txt
linefitter/: CMakeLists.txt  fast_atan2.h  houghtransform.cpp  houghtransform.h  lsd.cpp  lsd.h  lsdlinefitter.cpp  lsdlinefitter.h
linefitter/fast_lsd/: fast_atan2.h  line-segment-detection-engine.h  lsd.cpp  lsd.h  regionDataStructure.h
linefitter/grid/: houghgrid.cpp  houghgrid.h  houghpeak.cpp  houghpeak.h  houghstrip.cpp  houghstrip.h  lsdgrid.cpp  lsdgrid.h
localization/: CMakeLists.txt  coordinatereader.cpp  coordinatereader.h  localizer.cpp  localizer.h
navigation/: CMakeLists.txt  navigator.cpp  navigator.h  virtualenvironment.cpp  virtualenvironment.h
navigation/navigationmap/: navigationmap.cpp  navigationmap.h
navigation/navigationmap/grid/: frontiergrid.cpp  frontiergrid.h  opengrid.cpp  opengrid.h
occupancygrid/: CMakeLists.txt  occupancygrid.cpp  occupancygrid.h
occupancygrid/grid/: grid.cpp  grid.h
pngwriter/: CMakeLists.txt  png_writer.cpp  png_writer.h
ppmwriter/: CMakeLists.txt  ppm_writer.cpp  ppm_writer.h
sonar/: CMakeLists.txt  sonararchive.cpp  sonararchive.h
